removed site.baseurl references

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@ title: Yaniv Leviathan's Blog
               <article class="postArticle postArticle--short">
                 {% if post.image.feature %}
                   <a href="{{ post.url }}">
-                    <div class="postArticle-image desaturate" style="background-image:url('{{ post.image.feature | prepend: site.baseurl_featured_img }}')">
+                    <div class="postArticle-image desaturate" style="background-image:url('{{ post.image.feature | prepend: "/assets/images/hero/" }}')">
                     </div>
                   </a>
                 {% else %}
                 <a href="{{ post.url }}">
-                  <div class="postArticle-image" style="background-image:url('{{site.baseurl}}assets/images/logo-black.svg')">
+                  <div class="postArticle-image" style="background-image:url('/assets/images/logo-black.svg')">
                   </div>
                 </a>
                 {% endif %}
