--- a/about/index.html
+++ b/about/index.html
@@ -39,7 +39,11 @@ title: About Yaniv Leviathan
         </p>
         <h4>Spoiler Alert</h4>
         <p>In this iteration of the site, I decided to <strong>include the solutions to all puzzles</strong> in the posts. I'll be adding them gradually, so beware of spoilers!</p>
-        <h4>The About Me Page from 2017</h4>
+        <h4>The Images</h4>
+        <p>Some of the images for this site (especially for the graphics posts!) were created by me.
+          Others were taken from the awesome royalty-free images sites <a href="https://www.pexels.com">Pexels</a> and <a href="https://unsplash.com/">Unsplash</a>.
+        </p>
+        <h4>The About Me Page from 2007</h4>
         This is what I had to say in 2007 when I started the site:
         <blockquote class="u--startsWithDoubleQuote">
             <p>
