--- a/about/index.html
+++ b/about/index.html
@@ -49,9 +49,10 @@ title: About Yaniv Leviathan
         <p>In this iteration of the site, I decided to <strong>include the solutions to the puzzles</strong> in the
           posts. I'll be adding them gradually, so beware of spoilers!</p>
         <h4>Thanks</h4>
-        <p>I used a lot of images from the awesome royalty-free images sites <a href="https://www.pexels.com">Pexels</a>
-          and
-          <a href="https://unsplash.com/">Unsplash</a>, and I used the amazing <a
+        <p>I used a lot of images from the awesome royalty-free images sites <a
+            href="https://www.pexels.com">Pexels</a>,
+          <a href="https://unsplash.com/">Unsplash</a>, and <a
+            href="https://publicdomainvectors.org/">publicdomainvectors.org</a>, and I used the amazing <a
             href="https://github.com/vincentchan/mickey">Mickey theme</a> by <a
             href="https://github.com/vincentchan">Vincent Chan</a>.
           <br />
