--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ title: Yaniv Leviathan's Blog
               <a href="{{ post.url }}">
                 {% if forloop.index0 < 3 %}
                 <div class="postArticle-image desaturate"
-                  style="background-image:url('{{ post.image.feature | prepend: "/assets/images/hero/" }}')">
+                  style="background-image:url('{{ post.image.feature | prepend: "/assets/images/largesize/" }}')">
                   <!-- {%if post.tags contains "Solved" %}<span class="category-icon-large">&#9989;</span>{% endif %} -->
                   {%if post.categories contains "Puzzle" %}<span class="category-icon-large">&#129513;</span>{% endif %}
                   {%if post.categories contains "WIP" %}<span class="category-icon-large">&#128679;</span>{% endif %}
