--- a/memory_game/index.html
+++ b/memory_game/index.html
@@ -15,11 +15,26 @@
       display: none;
     }
 
-    #canvas {
-      display: none;
-      box-sizing: content-box;
-      cursor: pointer;
+    body {
+      background-color: black;
+      border: 0;
+      margin: 0;
+      padding: 0;
     }
+
+    #start {
+      background-color: blueviolet;
+    }
+
+    /* canvas {
+      box-sizing: border-box;
+      width: 100%;
+      height: 100%;
+      border: 0;
+      margin: 0;
+      padding: 0;
+      cursor: pointer;
+    } */
   </style>
 </head>
 
@@ -27,21 +42,8 @@
   <div id=loading>Loading...</div>
   <div id=main>
     <button id=start>Start</button>
-    <canvas width=1440 height=900 id="canvas"></canvas>
   </div>
-  <script src="/memory_game/js/math.js"></script>
-  <script src="/memory_game/js/util.js"></script>
-  <script src="/memory_game/js/mouse.js"></script>
-  <script src="/memory_game/js/resources.js"></script>
-  <script src="/memory_game/js/audio.js"></script>
-  <script src="/memory_game/js/graphics.js"></script>
-  <script src="/memory_game/js/keyboard.js"></script>
-  <script src="/memory_game/js/sprite.js"></script>
-  <script src="/memory_game/js/engine.js"></script>
-  <script src="/memory_game/js/wiggler.js"></script>
-  <script src="/memory_game/js/uitext.js"></script>
-  <script src="/memory_game/js/particle_system.js"></script>
-  <script src="/memory_game/js/memory_game.js"></script>
+  <script src="/js/memory_game.mjs" type="module"></script>
 </body>
 
 </html>
