--- a/memory_game/index.html
+++ b/memory_game/index.html
@@ -43,7 +43,7 @@
   <div id=main>
     <button id=start>Start</button>
   </div>
-  <script src="/js/memory_game.mjs" type="module"></script>
+  <script src="/memory_game/js/memory_game.mjs" type="module"></script>
 </body>
 
 </html>
