--- a/memory_game/index.html
+++ b/memory_game/index.html
@@ -26,15 +26,15 @@
       background-color: blueviolet;
     }
 
-    /* canvas {
-      box-sizing: border-box;
+    canvas {
+      /* box-sizing: border-box; */
       width: 100%;
       height: 100%;
       border: 0;
       margin: 0;
       padding: 0;
       cursor: pointer;
-    } */
+    }
   </style>
 </head>
 
