--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: Yaniv Leviathan's Blog
       <div class="postMeta-wrapper postMeta-wrapper--frontpage">
         <ul class="postMeta">
           <li class="postMeta-tagline">
-            puzzles, math, programming, and other interesting things
+            a collection of puzzles, math, hacking, and general coolness
           </li>
         </ul>
       </div>
