--- a/about/index.html
+++ b/about/index.html
@@ -22,6 +22,8 @@ title: About Yaniv Leviathan
   <section class="section--last">
     <div class="container container--content">
       <div class="content-body">
+        <blockquote class="largeQuote">“What I cannot create, I do not understand.” - Richard Feynman</blockquote>
+
         <h2>Welcome!</h2>
         <p>
           Welcome to my personal blog, where you will find my collection of math and hacking coolness,
@@ -31,6 +33,7 @@ title: About Yaniv Leviathan
           I'm really excited to share this collection with you and hope you'll find it as enjoyable to explore as it was
           for me to create.
         </p>
+
         <h3>Some History</h3>
         <p>
           This is the third iteration of my site, which I first started in 2007 at yaniv.leviathanonline.com. Here’s the
