--- a/about/index.html
+++ b/about/index.html
@@ -88,12 +88,12 @@ title: About Yaniv Leviathan
           WordPress for historical purposes only.</span>
 
         <p>
-          I finally moved to this latest version of the site, yanivle.github.io, in 2020, with <a
+          In 2020, I finally moved to this present version of the site, <a href="http://yanivle.github.io">yanivle.github.io</a>, with <a
             href="https://pages.github.com/">GitHub Pages</a>.
           Hopefully, having everything on <a href="https://github.com/">GitHub</a> would mean, at the very least, that
           my
           content won't be lost again.
-          One change in this latest iteration of the site is that I decided to add solutions to the puzzles. I'm adding
+          Note that unlike in previous versions of this site, in this latest iteration I decided to add solutions to the puzzles. I'm adding
           them gradually, so watch out for spoilers!
         </p>
 
@@ -107,7 +107,7 @@ title: About Yaniv Leviathan
           The images on this site that I haven't created myself come from the awesome royalty-free images sites:
           <a href="https://www.pexels.com">Pexels</a>,
           <a href="https://unsplash.com/">Unsplash</a>, and
-          <a href="https://publicdomainvectors.org/">publicdomainvectors.org</a>, and I used the amazing
+          <a href="https://publicdomainvectors.org/">publicdomainvectors.org</a>. I also used the amazing
           <a href="https://github.com/vincentchan/mickey">Mickey theme</a> by
           <a href="https://github.com/vincentchan">Vincent Chan</a>.
         </p>
