--- a/about/index.html
+++ b/about/index.html
@@ -26,7 +26,7 @@ title: About Yaniv Leviathan
 
         <h2>Welcome!</h2>
         <p>
-          Welcome to my personal blog, where you will find my collection of math and hacking coolness,
+          Welcome to my <a href="/">personal blog</a>, where you will find my collection of math and hacking coolness,
           including puzzles and write-ups about some of my favorite weekend projects.
           Quality is my top priority, so I am stringent about what I share.
           For example, I only post the very best puzzles that I know, and that I have solved myself.
