--- a/about/index.html
+++ b/about/index.html
@@ -22,11 +22,34 @@ title: About Yaniv Leviathan
   <section class="section--last">
     <div class="container container--content">
       <div class="content-body">
+
+        <style>
+          .myAvatar {
+            height: 240px;
+            width: 240px;
+            border-radius: 120px;
+            margin-top: -150px;
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            transition: filter 0.5s;
+            filter: drop-shadow(0 0 0.75rem black);
+          }
+
+          .myAvatar:hover {
+            filter: drop-shadow(0 0 0.1rem black);
+          }
+        </style>
+
+        <img src="/assets/images/me_small.jpg" alt="Yaniv Leviathan &#128051;" class="myAvatar">
+
         <blockquote class="largeQuote">“What I cannot create, I do not understand.” - Richard Feynman</blockquote>
 
         <p>I am a Distinguished Engineer at Google where I lead an
-          AI-research lab. I am lucky to work on some of the most interesting problems in AI with some of my best friends.
-          I am spending a lot of time trying to rethink AI from first principles. For example, we are working on new model
+          AI-research lab. I am lucky to work on some of the most interesting problems in AI with some of my best
+          friends.
+          I am spending a lot of time trying to rethink AI from first principles. For example, we are working on new
+          model
           architectures and training schemes for LLMs and image and video generation models.
           We recently made some of Google's important LLMs substantially faster and
           cheaper.</p>
@@ -34,7 +57,8 @@ title: About Yaniv Leviathan
         <p>I have been doing AI research for a long while.
           In 1998, as a high school student, I joined a startup building video
           understanding software where I programmed some neural networks
-          (in plain C &#x1f62e;). Previously at Google, I developed and led a team that built an AI system that reads and understands the open web.
+          (in plain C &#x1f62e;). Previously at Google, I developed and led a team that built an AI system that reads
+          and understands the open web.
           Thanks to this system, Google Search shows answers, cards, and lists on a large
           fraction of user queries, like <a href="https://www.google.com/search?q=homer+simpson">[homer simpson]</a>,
           <a href="https://www.google.com/search?q=world+war+2">[world war 2]</a>, and
@@ -47,9 +71,6 @@ title: About Yaniv Leviathan
           data, like opening hours, and data from Duplex’s phone calls was shown to users
           over 1 trillion times.
         </p>
-
-        <div class="img img--fullContainer img--18xLeading" style="background-image: url(/assets/images/me.jpg);">
-        </div>
 
         <p>
           This site features my collection of math and hacking puzzles,
