--- a/index.html
+++ b/index.html
@@ -6,16 +6,45 @@ title: Yaniv Leviathan's Blog
 <section class="section--first section--frontpage">
   <div class="section-title">
     <div class="container">
-      <h1 class="textLogo textLogo--frontpage">
-        {{ site.name }}
-      </h1>
-      <div class="postMeta-wrapper postMeta-wrapper--frontpage">
-        <ul class="postMeta">
-          <li class="postMeta-tagline">
-            a collection of puzzles, math, hacking, and general coolness
-          </li>
-        </ul>
-      </div>
+
+      <style>
+        .myAvatar {
+          height: 240px;
+          border-radius: 100%;
+          transition: margin-top 0.5s;
+          filter: drop-shadow(0 0 0.75rem black);
+          margin-top: -200px;
+          z-index: 1000;
+          position: relative;
+        }
+
+        #aboutLink:hover .myAvatar {
+          margin-top: 20px;
+        }
+
+        #title, subtitle {
+          opacity: 100%;
+          transition: opacity 0.5s;
+        }
+
+        #aboutLink:hover #title, #aboutLink:hover #subtitle {
+          opacity: 20%;
+        }
+      </style>
+
+      <a id="aboutLink" href="/about/" style="background-image: none;">
+        <img src="/assets/images/me_small.jpg" alt="Yaniv Leviathan &#128051;" class="myAvatar">
+        <h1 id="title" class="textLogo textLogo--frontpage">
+          {{ site.name }}
+        </h1>
+        <div id="subtitle" class="postMeta-wrapper postMeta-wrapper--frontpage">
+          <ul class="postMeta">
+            <li class="postMeta-tagline">
+              a collection of puzzles, math, hacking, and general coolness
+            </li>
+          </ul>
+        </div>
+      </a>
     </div>
   </div>
 </section>
@@ -29,25 +58,24 @@ title: Yaniv Leviathan's Blog
             <article class="postArticle postArticle--short">
               {% if post.image.feature %}
               <a href="{{ post.url }}">
-                {% if forloop.index0 < 3 %}
-                <div class="postArticle-image desaturate"
-                  style="background-image:url('{{ post.image.feature | prepend: "/assets/images/largesize/" }}')">
+                {% if forloop.index0 < 3 %} <div class="postArticle-image desaturate"
+                  style="background-image:url('{{ post.image.feature | prepend: " /assets/images/largesize/" }}')">
                   <!-- {%if post.tags contains "Solved" %}<span class="category-icon-large">&#9989;</span>{% endif %} -->
-                  {%if post.categories contains "Puzzles" %}<span
-                    class="category-icon-large">&#129513;</span>{% endif %}
+                  {%if post.categories contains "Puzzles" %}<span class="category-icon-large">&#129513;</span>{% endif
+                  %}
                   {%if post.categories contains "WIP" %}<span class="category-icon-large">&#128679;</span>{% endif %}
                   {% else %}
                   <div class="postArticle-image desaturate"
-                    style="background-image:url('{{ post.image.feature | prepend: "/assets/images/midsize/" }}')">
+                    style="background-image:url('{{ post.image.feature | prepend: " /assets/images/midsize/" }}')">
                     <!-- {%if post.tags contains "Solved" %}<span class="category-icon-small">&#9989;</span>{% endif %} -->
-                    {%if post.categories contains "Puzzles" %}<span
-                      class="category-icon-small">&#129513;</span>{% endif %}
+                    {%if post.categories contains "Puzzles" %}<span class="category-icon-small">&#129513;</span>{% endif
+                    %}
                     {%if post.categories contains "WIP" %}<span class="category-icon-small">&#128679;</span>{% endif %}
                     {% endif %}
                     {% comment %}
                     {%if post.categories contains "Math" %}<span class="category-icon">&#8512;</span>{% endif %}
-                    {%if post.categories contains "Programming" %}<span
-                      class="category-icon">&#128187;</span>{% endif %}
+                    {%if post.categories contains "Programming" %}<span class="category-icon">&#128187;</span>{% endif
+                    %}
                     {%if post.categories contains "Graphics" %}<span class="category-icon">&#128396;</span>{% endif %}
                     {% endcomment %}
                   </div>
