--- a/about/index.html
+++ b/about/index.html
@@ -73,7 +73,7 @@ title: About Yaniv Leviathan
         </p>
 
         <p>
-          This site features my collection of math and hacking puzzles,
+          <a href="/">This site</a> features my collection of math and hacking puzzles,
           as well as some write-ups of some of my favorite weekend projects.
         </p>
         <p>
