--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@ title: Yaniv Leviathan's Blog
           position: relative;
         }
 
-        #aboutLink:hover .myAvatar {
-          margin-top: 20px;
+        @media (hover: hover) {
+          #aboutLink:hover .myAvatar {
+            margin-top: 20px;
+          }
         }
 
         #title, subtitle {
