--- a/about/index.html
+++ b/about/index.html
@@ -41,6 +41,12 @@ title: About Yaniv Leviathan
           }
         </style>
 
+        <style>
+          div.section-gradient {
+            display: none !important;
+          }
+        </style>
+
         <img src="/assets/images/me_small.jpg" alt="Yaniv Leviathan &#128051;" class="myAvatar">
 
         <blockquote class="largeQuote">“What I cannot create, I do not understand.” - Richard Feynman</blockquote>
