--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ title: Yaniv Leviathan's Blog
 
       <style>
         .myAvatar {
+          -webkit-transform: translate3d(0,0,0);
           height: 240px;
           border-radius: 100%;
           transition: margin-top 0.5s;
