--- a/about/index.html
+++ b/about/index.html
@@ -49,7 +49,7 @@ title: About Yaniv Leviathan
 
         <img src="/assets/images/me_small.jpg" alt="Yaniv Leviathan &#128051;" class="myAvatar">
 
-        <blockquote class="largeQuote">“What I cannot create, I do not understand.” - Richard Feynman</blockquote>
+        <blockquote class="largeQuote">“What I cannot create, I do not understand.”<br/>- Richard Feynman</blockquote>
 
         <p>I am a Distinguished Engineer at Google where I lead an
           AI-research lab. I am lucky to work on some of the most interesting problems in AI with some of my best
