--- a/about/index.html
+++ b/about/index.html
@@ -57,7 +57,7 @@ title: About Yaniv Leviathan
           I am spending a lot of time trying to rethink AI from first principles. For example, we are working on new
           model
           architectures and training schemes for LLMs and image and video generation models.
-          We recently made some of Google's important LLMs substantially faster and
+          We recently made most of Google's important LLMs substantially faster and
           cheaper.</p>
 
         <p>I have been doing AI research for a long while.
@@ -78,6 +78,10 @@ title: About Yaniv Leviathan
           over 1 trillion times.
         </p>
 
+        <p>A couple of decades ago I've also spent several intensive years working on cryptography and cybersecurity.
+          I've met some of the smartest people that I know back then, many of whom are still amongst my best friends.
+        I've also spent a few years working on computer graphics, which remains one of my favorite fields to this day.</p>
+
         <p>
           <a href="/">This site</a> features my collection of math and hacking puzzles,
           as well as some write-ups of some of my favorite weekend projects.
@@ -95,7 +99,7 @@ title: About Yaniv Leviathan
           Some posts use images from the awesome royalty-free images sites:
           <a href="https://www.pexels.com">Pexels</a>,
           <a href="https://unsplash.com/">Unsplash</a>, and
-          <a href="https://publicdomainvectors.org/">publicdomainvectors.org</a>.
+          <a href="https://publicdomainvectors.org/">publicdomainvectors.org</a>, or from the awesome <a href="https://ideogram.ai">Ideogram</a> image generation site.
           The design of the site is based on the
           <a href="https://github.com/vincentchan/mickey">Mickey theme</a> by
           <a href="https://github.com/vincentchan">Vincent Chan</a>.
