--- a/index.html
+++ b/index.html
@@ -2,112 +2,4 @@
 layout: default
 title: Yaniv Leviathan's Blog
 ---
-
-<section class="section--first section--frontpage">
-  <div class="section-title">
-    <div class="container">
-
-      <style>
-        .blockGroup-list .block div.recommendedPost {
-          box-shadow: none;
-          animation: animateRecommendedItemShadow 5s infinite;
-        }
-
-        @keyframes animateRecommendedItemShadow {
-          0% {
-            box-shadow: none;
-          }
-
-          80% {
-            box-shadow: none;
-          }
-
-          90% {
-            box-shadow:
-            0 1px 4px rgba(0, 0, 0, 0.2),
-            0 0 12px #fff,
-            -3px 0 20px rgba(255, 0, 255, 0.5),
-            3px 0 20px rgba(0, 255, 255, 0.9);
-          }
-
-          100% {
-            box-shadow: none;
-          }
-        }
-
-        .blockGroup-list .block div.recommendedPost:hover {
-          box-shadow:
-          0 1px 10px rgba(0, 0, 0, 0.7),
-          0 0 12px #fff,
-          -3px 0 20px rgba(255, 0, 255, 0.5),
-          3px 0 20px rgba(0, 255, 255, 0.9) !important;
-        }
-      </style>
-
-      <a id="aboutLink" href="/about/" style="background-image: none;">
-        <h1 id="title" class="textLogo textLogo--frontpage">
-          {{ site.name }}
-        </h1>
-        <div id="subtitle" class="postMeta-wrapper postMeta-wrapper--frontpage">
-          <ul class="postMeta">
-            <li class="postMeta-tagline">
-              a collection of puzzles, math, hacking, and general coolness
-            </li>
-          </ul>
-        </div>
-      </a>
-    </div>
-  </div>
-</section>
-<section class="section--postsWrapper">
-  <div class="container">
-    <div class="blockGroup">
-      <ul class="blockGroup-list">
-        {% for post in site.posts %}
-        <li class="block">
-          {% if post.recommended %}
-          <div class="postArticle-wrapper recommendedPost">
-          {% else %}
-          <div class="postArticle-wrapper">
-            {% endif %}
-            <article class="postArticle postArticle--short">
-              {% if post.image.feature %}
-              <a href="{{ post.url }}">
-                {% if forloop.index0 < 3 %} <div class="postArticle-image desaturate"
-                  style="background-image:url('{{ post.image.feature | prepend: "/assets/images/largesize/" }}')">
-                  <!-- {%if post.tags contains "Solved" %}<span class="category-icon-large">&#9989;</span>{% endif %} -->
-                  {%if post.categories contains "Puzzles" %}<span class="category-icon-large">&#129513;</span>{% endif
-                  %}
-                  {%if post.categories contains "WIP" %}<span class="category-icon-large">&#128679;</span>{% endif %}
-                  {% else %}
-                  <div class="postArticle-image desaturate"
-                    style="background-image:url('{{ post.image.feature | prepend: "/assets/images/midsize/" }}')">
-                    <!-- {%if post.tags contains "Solved" %}<span class="category-icon-small">&#9989;</span>{% endif %} -->
-                    {%if post.categories contains "Puzzles" %}<span class="category-icon-small">&#129513;</span>{% endif
-                    %}
-                    {%if post.categories contains "WIP" %}<span class="category-icon-small">&#128679;</span>{% endif %}
-                    {% endif %}
-                    {% comment %}
-                    {%if post.categories contains "Math" %}<span class="category-icon">&#8512;</span>{% endif %}
-                    {%if post.categories contains "Programming" %}<span class="category-icon">&#128187;</span>{% endif
-                    %}
-                    {%if post.categories contains "Graphics" %}<span class="category-icon">&#128396;</span>{% endif %}
-                    {% endcomment %}
-                  </div>
-              </a>
-              {% else %}
-              <a href="{{ post.url }}">
-                <div class="postArticle-image" style="background-image:url('/assets/images/logo-black.svg')">
-                </div>
-              </a>
-              {% endif %}
-              <a class="postArticle-title" href="{{ post.url }}">{{ post.title }}</a>
-            </article>
-            <div class="block-postMeta">{{ post.date | date_to_string }}</div>
-          </div>
-        </li>
-        {% endfor %}
-      </ul>
-    </div>
-  </div>
-</section>
+{% include index.html %}
