--- a/taotp.html
+++ b/taotp.html
@@ -15,8 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yaniv Leviathan: The Art of Transformer Programming</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="icon"
-        href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>📖</text></svg>">
+    <link rel="shortcut icon" href="/assets/images/favicon.ico">
     <style>
         body {
             font-family: 'Arial', sans-serif;
