--- a/taotp.html
+++ b/taotp.html
@@ -129,7 +129,7 @@
                     <a href="/taotp.ipynb" class="btn btn-custom mb-2 me-md-2">Code</a>
                     <a href="/about/" class="btn btn-custom mb-2 me-md-2">Author</a>
                     <a href="/" class="btn btn-custom mb-2 me-md-2">Author Blog</a>
-                    <a href="mailto:yaniv.taotp@gmail.com" class="btn btn-custom mb-2">Contact</a>
+                    <a href="mailto:yaniv.leviathan.public@proton.me" class="btn btn-custom mb-2">Contact</a>
                 </div>
             </div>
         </div>
