--- a/about/index.html
+++ b/about/index.html
@@ -188,7 +188,7 @@ title: About Yaniv Leviathan
         <!-- <img src="/assets/images/about/duplex-logo-white.webp" alt="Google Duplex Logo"
           style="width: 120px; margin-left: -140px; float: left;" class="period-logo" /> -->
         <span style="width:50%; display: inline-block; aspect-ratio: 16 / 9; float: left; margin-right: 10px;">
-          <video poster="" id="video_duplex" controls="" loop="" playsinline="" width="100%"
+          <video poster="" id="video_duplex" controls="" playsinline="" width="100%"
             src="/assets/images/about/google_duplex_preso.mp4" style="border: solid 1px lightgray; width: 100%;">
           </video>
           <!-- <iframe class="youtube-video" src="https://www.youtube.com/embed/D5VN56jQMWM?si=UG9kLJXF2qi7kH6a"
