--- a/about/index.html
+++ b/about/index.html
@@ -256,7 +256,7 @@ title: About Yaniv Leviathan
             search_qna_example_element.src = selected_search_qna_example_image;
           }
         </script>
-        I started and led the team that built an AI system that reads and understands the open web and automatically
+        I started and led the team that built the AI system that reads and understands the open web and automatically
         populates Google's <span><a
             href="https://blog.google/products/search/introducing-knowledge-graph-things-not/">Knowledge
             Graph</a></span>.
