--- a/about/index.html
+++ b/about/index.html
@@ -2,6 +2,14 @@
 layout: default
 title: About Yaniv Leviathan
 ---
+<nav class="menuWrapper">
+  <ul class="popover popover--menu">
+    <li class="menu-avatar">
+      <a href="/" class="brandLogo brandLogo--small">{{ site.name }}</a>
+    </li>
+  </ul>
+</nav>
+
 <article class="postWrapper">
   <section class="section--first section--about is-darkBackgrounded u-table">
     <canvas class="section-backgroundImage" id="animation"></canvas>
