--- a/about/index.html
+++ b/about/index.html
@@ -11,7 +11,7 @@ title: About Yaniv Leviathan
 </nav>
 
 <article class="postWrapper">
-  <section class="section--first section--about is-darkBackgrounded u-table">
+  <section id="about-header" class="section--first section--about is-darkBackgrounded u-table">
     <canvas class="section-backgroundImage" id="animation"></canvas>
     <div class="section-gradient"></div>
     <div class="section-title is-darkBackgrounded u-tableCell u-verticalAlignMiddle">
@@ -95,7 +95,8 @@ title: About Yaniv Leviathan
         <p style="text-align: center;">
           <a href="#section-duplex"
             style="white-space:nowrap;">Google&nbsp;Duplex</a> &middot;
-          <a href="#section-speculative-decoding" style="white-space:nowrap;">Speculative&nbsp;Decoding</a> &middot;
+            <a href="#section-speculative-decoding" style="white-space:nowrap;">Speculative&nbsp;Decoding</a> &middot;
+            <a href="#section-google-search" style="white-space:nowrap;">Google Search Answers</a> &middot;
           <a href="#section-image-video-game-gen" style="white-space:nowrap;">GameNGen</a> &middot;
           <a href="#section-taotp">The&nbsp;Art&nbsp;of&nbsp;Transformer Programming</a> &middot;
           <a href="https://arxiv.org/abs/2410.02703" style="white-space:nowrap;">Selective&nbsp;Attention</a>
