--- a/about/index.html
+++ b/about/index.html
@@ -114,7 +114,7 @@ title: About Yaniv Leviathan
         <p>
         <!-- <img src="/assets/images/about/google-research-logo-white.webp" alt="Google Research Logo"
           style="width: 120px; margin-left: -140px; float: left;" class="period-logo" /> -->
-        <span>I am a Distinguished Engineer at Google where I lead an
+        <span>I am a Google Fellow at Google where I lead an
           AI-research lab, focusing on foundations, new model architectures, new
           data sources, and image, video, and game generation.
           My work made Google's LLMs substantially faster and cheaper.</span>
